_sass/main.scss
/* ... */
html {
    scroll-behavior: smooth;
}

body {
    font-family: 'Open Sans', sans-serif;
    padding-top: 3.5rem;
    margin: 0;
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    background-color: oldlace;
    // padding-left: 10rem;
    // padding-right: 10rem;
    // @media screen and (max-width: 900px) {
    //     padding: 3rem;
    // }
}

h1 {
    font-family: 'Ibarra Real Nova', serif;
    font-size: 3em;
    font-weight: 300;
}


h2 {
    font-family: 'Open Sans', sans-serif;
    font-size: 2.25rem;
    font-weight: 900;
    padding-top: 3rem;
    padding-bottom: 2rem;
}

h3 {
    font-family: 'Ibarra Real Nova', serif;
    font-size: 1.5rem;
    font-weight: 600;
    padding-top: 3rem;
    padding-bottom: 1rem;

    @media screen and (max-width: 740px) {
        padding-top: 1rem;
    }
}

a {
    color: black;
    text-decoration: none;
    font-weight: 600;
}

a:hover {
    color: darkolivegreen;
    text-decoration: underline wavy;
    text-underline-offset: 5px;
}

nav {
    padding-left: 3rem !important;

    @media screen and (max-width: 740px) {
        padding-left: 33px;
        padding-bottom: 0;
    }
}

nav a {
    @media screen and (max-width: 740px) {
        text-align: center !important;
    }
}

.navigation {
    @media screen and (max-width: 740px) {
        text-align: center !important;
    }
}

.title:hover {
    text-decoration: none !important;
    font-weight: 600;
}

.current {
    color: darkolivegreen;
    text-decoration: underline wavy;
    text-underline-offset: 5px;
}

button {
    width: 75px;
    background-color: darkolivegreen;
    border: none;
    color: white !important;
    padding: 15px 32px 15px 28px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    border-radius: 20%;
    z-index: 1;
}


button:hover {
    background: #3f5b0e;
    color: oldlace;
}

//Dark Mode
.dark-mode {
    background-color: #05263c; //#251d48
    color: oldlace;

    p {
        color: oldlace;
    }

    h2 {
        color: oldlace!important;
    }

    hr {
        border-top-color: oldlace;
    }

    a {
        color: oldlace;
    }

    a:hover {
        color: #B2AAE4; //#a97acc
    }

    .current {
        color: #B2AAE4;
    }

    .hello {
        background-image: linear-gradient(to bottom, #05263c, #1b1e21, #000);

    }

    button {
        background-color: #7768ce !important;
    }

    button:hover {
        background-color: #B2AAE4 !important;
    }


    footer {
        background-color: black;
    }

    .moon-emoji {
        display: inline;
    }
    
    .leaf {
        filter: brightness(0) invert(1);
    }
    
    
    .minimalist2 {
        filter: brightness(0) invert(1);
    }
    
    .darklogo {
        filter: contrast(0);
    }
    
    
    .leaves-emoji {
        display: none;
    }
}

.dark-mode-checkbox {
    opacity: 0;
    position: absolute;
    width: 75px;
    height: 60px;
    bottom: 2px;
    right: 2px;
}

#darkModeBtn {
    position: fixed;
    bottom: 50px;
    right: 50px;

    @media screen and (max-width: 767px) {
        right: 30px;
        bottom: 30px;
    }
}

// .resume-btn {
//     button {
//         width: 175px;
//     }
//     a {
//         color: white !important;
//     }
// }

.padrule {
    padding-left: 12rem;
    padding-right: 12rem;

    @media screen and (max-width: 900px) {
        padding: 2.5rem;
    }

    @media screen and (max-width: 740px) {
        padding: 0 2.5rem;
    }
}

.content {
    flex: 1;
}

.row {
    width: 100%;
}

.hello {
    height: 94vh;
    // background-color: #A1AA82;
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-image: linear-gradient(to bottom, #fdf5e6, #fcb9bc, #a1aa82);

    @media screen and (max-width: 767px) {
        height: 85vh;
    }

    h1 {
        font-family: 'Open Sans', sans-serif;
        padding-top:0;
        padding-bottom: 0;
        font-size: 5.5rem;
        font-weight: 900;

        @media screen and (max-width: 767px) {
            font-size: 3.5rem;
        }
    }

    h2 {
        font-family: 'Open Sans', sans-serif;
        font-weight: 900;
        color: black;
        padding-bottom: 0;
        font-size: 3rem;
        margin-bottom: 0;
    }

    h3 {
        font-family: "Fragment Mono", sans-serif;
        font-weight: 600;
        padding-top: 1rem;
        font-size: 2.5rem;

        @media screen and (max-width: 767px) {
            font-size: 1.5rem;
        }
    }
}


.intro {
    padding-top: 8rem;
    padding-bottom: 10rem;

    @media screen and (max-width: 740px) {
        padding-bottom: 5rem;
        padding-top: 3rem;
    }
}

//wavy shapes
.shape {
    position: relative;
}

.shape-bottom {
    @media screen and (max-width: 740px) {
        padding-bottom: 2rem;
    }
}

//shape 1
.custom-shape-divider-top-1658328325 {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    overflow: hidden;
    line-height: 0;
}

.custom-shape-divider-top-1658328325 svg {
    position: relative;
    display: block;
    width: calc(100% + 1.3px);
    height: 127px;
}

.custom-shape-divider-top-1658328325 .shape-fill {
    fill: #FDF5E6;
}

.dark-mode .custom-shape-divider-top-1658328325 .shape-fill {
    fill: #05263c;
}

//shape 2
.custom-shape-divider-top-1658328596 {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    overflow: hidden;
    line-height: 0;
}

.custom-shape-divider-top-1658328596 svg {
    position: relative;
    display: block;
    width: calc(100% + 1.3px);
    height: 127px;
    transform: rotateY(180deg);
}

.custom-shape-divider-top-1658328596 .shape-fill {
    fill: #A1AA82;
}

.dark-mode .custom-shape-divider-top-1658328596 .shape-fill {
    fill: #000;
}

.headshot {
    align-items: center;
    justify-content: center;
    display: flex;

}
/* ... */

